--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,6 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # instead be materialized as tables. Any models you add to the root of the models folder will 
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+dispatch:
+  - macro_namespace: dbt_external_tables
+    search_order: ['dbt_external_tables', 'dbt']
 
 models:
   my_new_project:
