--- a/.github/workflows/dbt_ci.yml
+++ b/.github/workflows/dbt_ci.yml
@@ -1,36 +1,50 @@
-name: DBT CI
+name: dbt CI
 
 on:
   push:
-    branches:
-      - main   
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
 
 jobs:
-  dbt_test:
+  dbt-build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install dbt-core dbt-bigquery  # adapter selon ton entrepôt
+      - name: Install dbt BigQuery
+        run: pip install dbt-bigquery
 
-    - name: Run DBT deps
-      run: dbt deps
+      - name: Configure GCP credentials
+        run: |
+          echo "${{ secrets.GCP_CREDENTIALS }}" > ${HOME}/gcp_credentials.json
 
-    - name: Run DBT seeds (optionnel)
-      run: dbt seed --profiles-dir ./profiles
+      - name: Set up profiles.yml
+        run: |
+          mkdir -p ~/.dbt
+          echo "
+          my_project:
+            outputs:
+              dev:
+                type: bigquery
+                method: service-account
+                project: <TON_PROJECT_ID>
+                dataset: dbt_ci
+                keyfile: ${HOME}/gcp_credentials.json
+            target: dev
+          " > ~/.dbt/profiles.yml
 
-    - name: Run DBT tests
-      run: dbt test --profiles-dir ./profiles
+      - name: Install dependencies
+        run: dbt deps
+
+      - name: Run dbt compile
+        run: dbt compile --profiles-dir ~/.dbt
+
+      - name: Run dbt tests
+        run: dbt test --profiles-dir ~/.dbt
