--- a/.github/workflows/dbt_ci.yml
+++ b/.github/workflows/dbt_ci.yml
@@ -20,7 +20,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install dbt-core dbt-bigquery
-          
+
+      - name: Check secret length
+        run: |
+          echo ${{ secrets.GCP_CREDENTIALS }} | wc -c
+
       - name: Setup GCP credentials
         run: |
           echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp_key.json
