--- a/.github/workflows/dbt_ci.yml
+++ b/.github/workflows/dbt_ci.yml
@@ -27,8 +27,9 @@ jobs:
 
       - name: Setup GCP credentials
         run: |
-          echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp_key.json
+          echo "${{ secrets.GCP_CREDENTIALS }}" | base64 --decode > /tmp/gcp_key.json
           export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp_key.json
+
 
       #  Vérifier la connexion à BigQuery
       - name: dbt debug
