update location of keyfile

--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ my_new_project:
     dev:
       type: bigquery
       method: service-account
-      keyfile: gs://europe-west1-dbt-airflow-33db5cc2-bucket/access/testdbfordbt-472212-5e93c9130c7f.json
+      keyfile: /tmp/gcp_key.json #gs://europe-west1-dbt-airflow-33db5cc2-bucket/access/testdbfordbt-472212-5e93c9130c7f.json
       project: testdbfordbt-472212 
       dataset: dbt_mjebari
       threads: 1
