--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,6 +40,8 @@ dispatch:
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
+    # Applies to all files under models/
+    staging:
+      +enabled: true
       +materialized: table
+
