--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -47,4 +47,7 @@ models:
       +materialized: table
       dim_date: 
         +materialized: view
-
+    analytics_obt:
+      +schema: dbt_obt
+      +enabled: true
+      +materialized: table
