--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -24,6 +24,12 @@ sources:
       - name: sales_reports
       - name: shippers
       - name: strings
+      - name: events
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
+        loaded_at_field: created_at
+
    
 
 
