--- a/packages.yml
+++ b/packages.yml
@@ -1,5 +1,13 @@
 packages:
   - package: dbt-labs/dbt_external_tables
     version: [">=0.11.0", "<0.12.0"]
+
   - package: dbt-labs/dbt_utils
     version: 1.3.1
+
+  - package: dbt-labs/codegen
+    version: 0.9.0
+
+  - package: calogica/dbt_expectations
+    version: [">=0.8.0", "<0.9.0"]
+
