--- a/.github/workflows/dbt_ci.yml
+++ b/.github/workflows/dbt_ci.yml
@@ -16,9 +16,8 @@ jobs:
         uses: actions/checkout@v3
 
       #  Installer Python et dbt BigQuery
-      - name: Setup Python and dbt
+      - name: Setup dbt
         run: |
-          python -m pip install --upgrade pip
           pip install dbt-core dbt-bigquery
 
       - name: Setup GCP credentials from GCS
