--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -2,8 +2,8 @@ version: 2
 
 sources:
   - name: raw          
-    database: essential-keep-475016-i5             
-    schema: dbt_raw                     
+    database: "{{ target.project }}"     
+    schema: "dbt_mjebari"                    
     tables:
       - name: customers
         freshness:
