--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -6,9 +6,9 @@ sources:
     schema: "dbt_mjebari"                    
     tables:
       - name: customers
-        freshness:
-            warn_after: {count: 12, period: hour}
-            error_after: {count: 24, period: hour}
+        #freshness:
+            #warn_after: {count: 12, period: hour}
+            #error_after: {count: 24, period: hour}
         loaded_at_field: created_at
       - name: employees
       - name: employee_privileges
