disable raw models

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -51,8 +51,8 @@ models:
       +schema: dbt_obt
       +enabled: true
       +materialized: table
-    raw: 
-      +materialized: table
+    #raw: 
+      #+materialized: table
 tests: 
   my_new_project: 
   +severity: warn
