--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,9 +35,20 @@ clean-targets:         # directories to be removed by `dbt clean`
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
+
+
+on-run-start: 
+  - "CREATE TABLE IF NOT EXISTS {{ target.schema }}.audit_log (
+    model_name string,
+     run_timestamp TIMESTAMP
+    )"
+
+
 models:
   my_new_project:
     staging:
+      +post-hook:
+        - "INSERT INTO  {{ target.schema }}.audit_log VALUES ('{{ this }}', CURRENT_TIMESTAMP)"
       +schema: dbt_staging 
       +enabled: true
       +materialized: table
