--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -1,21 +1,22 @@
 version: 2
 
 sources:
-  - name: raw          
-    database: "{{ target.project }}"     
-    schema: "dbt_mjebari"                    
+  - name: raw
+    database: "{{ target.project }}"
+    schema: "dbt_mjebari"
     tables:
       - name: customers
         #freshness:
             #warn_after: {count: 12, period: hour}
             #error_after: {count: 24, period: hour}
-        loaded_at_field: created_at
+        config:
+          loaded_at_field: created_at
       - name: employees
       - name: employee_privileges
-      - name: invoices 
+      - name: invoices
       - name: suppliers
-      - name: products 
-      - name: inventory_transactions 
+      - name: products
+      - name: inventory_transactions
       - name: inventory_transaction_types
       - name: order_details
       - name: orders
@@ -29,10 +30,9 @@ sources:
       - name: shippers
       - name: strings
       - name: events
-      
-
-   
 
 
 
-      
+
+
+
