--- a/packages.yml
+++ b/packages.yml
@@ -10,3 +10,6 @@ packages:
 
   - package: metaplane/dbt_expectations
     version: [">=0.8.0", "<0.9.0"]
+
+ # - package: brooklyn-data/dbt_artifacts
+   # version: [">=2.5.0", "<3.0.0"]
