--- a/packages.yml
+++ b/packages.yml
@@ -11,5 +11,5 @@ packages:
   - package: metaplane/dbt_expectations
     version: [">=0.8.0", "<0.9.0"]
 
- # - package: brooklyn-data/dbt_artifacts
-   # version: [">=2.5.0", "<3.0.0"]
+  - package: elementary-data/elementary
+    version: 0.20.1
