--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -5,7 +5,7 @@ sources:
     database: "{{ target.project }}"
     schema: "dbt_mjebari"
     tables:
-      - name: customers
+      - name: customer
         #freshness:
             #warn_after: {count: 12, period: hour}
             #error_after: {count: 24, period: hour}
